I have persisted with TKinter and decided to stick with TKinter. Plan is to introduce GTK+ features later to make more intuitive capability, IF... If that is needed.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
 - File location/directory checking and error handling. "userData" and the respective directory structure will need to be initiated and verified.
 - Add user modifiable settings for storage of data structure
 	- What about a .gitignore?
+- Statusbar: 
+	- List the path of selection "Category / Specific file"
