--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,5 @@
 - Make the file list sorted alphanumerically
 
 - Begin incorporating keyboard shortcuts for save, undo/redo, etc.
+- Fix up the _event_handle() function. The naming convention and general order of self.pasvData in EditableListbox() is very fragile and prone to error.
+- Do file validation so files can't be created in parent category folder.
